<resources>
    <string name="app_name">Report Generator</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="title_activity_add_client">Add client</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone number</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="address3">Address 3</string>
    <string name="address4">Address 4</string>
    <string name="address5">Address 5</string>
    <string name="location1">Location 1</string>
    <string name="location2">Location 2</string>
    <string name="id">ID</string>
    <string name="send">SEND</string>
    <string name="items">Items</string>
    <string name="containers">Containers</string>
    <string name="comment">Comments</string>
    <string name="containersqty">Container(s) QTY:</string>
    <string name="itemqty">Item(s) QTY:</string>
    <string name="tick">TICK TO ACKNOWLEDGE</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_client_view">Client details</string>
    <string name="title_activity_add_container">Add Container</string>
    <string name="title_activity_container_view">View Container</string>
    <string name="title_activity_confirm_report">PDF Report</string>
    <string name="title_activity_send_report">Send Report</string>
    <string name="generating_report">Generating PDF...</string>
</resources>
